stilo.css
@charset "UTF-8";

@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');

@font-face {
    font-family:'droide' ;
    src: url('fontes/idroid.otf') format('opentype');
    font-weight: normal;
}


:root{
    --cor0: #ebe5c5;
    --cor1: #83e1ad;
    --cor2: #3ddc84;
    --cor3: #2fa866;
    --cor4: #1a5c37;
    --cor5: #063d1e;
    
    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
    --font-destaque: "Bebas Neue", sans-serif;
    --fonte-droide: 'droide', cursive ;
}

*{
    margin: 0px;
    padding: 0px;
}


body{
    font-family:var(--fonte-padrao);
    background-color:var(--cor0);
}

a.externo::after{
    content:'\00A0\1F517' ;
}


header{
    background-image:linear-gradient(to bottom,var(--cor3),var(--cor5));
    min-height: 150px;
    padding-top: 40px;
}

header > h1 {
    color:white;
    font-family: var(--font-destaque);
    text-align: center;
    font-size: 3em;
    font-weight: normal;
    margin-bottom: 20px;
    text-shadow: 2px 2px rgba(0, 0, 0, 0.207) ;
}

header p {
    color: white;
    text-align: center;
    font-size: 1.2em;
    max-width: 600px;
    padding-right:10px;
    padding-left:10px;
    margin: auto;
    padding-bottom: 40px;
    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.195);
}

nav{
    background-color: var(--cor5);
    padding: 10px;
    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.226);
}
nav > a {
    color: white;
    padding:10px ;
    border-radius: 5px;
    text-decoration: none;
    font-weight: bold;
    transition-duration:.5s ;
}
nav > a:hover{
    background-color: var(--cor3);
    color: var(--cor5);
}


main{
    background-color: white;
    max-width:300px ;
    min-width: 1000px;
    margin: auto;
    margin-bottom: 30px;
    padding: 20px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.407);
    border-bottom-left-radius:10px ;
    border-bottom-right-radius:10px ;
}

main h1 {
    color: var(--cor5);
    font-family: var(--fonte-droide);
    font-weight: normal;
    font-size: 1.8em;
}
main  h2 {
    color: var(--cor4);
    font-family: var(--fonte-droide);
    font-size: 1.3em;
    font-weight: normal;
    background-image:linear-gradient(to right,  var(--cor1),transparent) ;
    text-indent: 8px;
}

main p {
    margin: 15px 0px;
    text-align: justify;
    text-indent: 30px;
    font-size: 1em;
    line-height: 2em;
}

main strong{
    color: var(--cor4);
    font-weight: bold ;
}

main a {
    text-decoration: none;
    font-weight: bold;
    color: var(--cor5);
    background-color: var(--cor1);
    padding: 2px 6px;
}

main a:hover{
    text-decoration: underline;
    color: var(--cor4);
}
main img {
    width: 100%;
}

main img.pq{
    max-width: 500px;
    display: block;
    margin: auto;
}

div.video{
    background-color: var(--cor5);
    margin-bottom: 30px;
    margin: 0px -20px 30px  -20px;
    padding: 20px;
    padding-bottom: 50%;
    position: relative;
}
div.video> iframe{
    position: absolute; 
    top:5% ;
    left:5%;
    width:90% ;
    height:90% ; 
}

aside{
    background-color: var(--cor1);
    padding: 10px;
    border-radius: 10px;
    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.289);
}

aside h3 {
    background-color: var(--cor4);
    color: white;
    padding: 10px;
    border-radius: 10px 10px 0px 0px;
    margin: -10px -10px 0px -10px;
}

aside > ul {
   /*n é compativel com todas os nevegadores*/
    list-style-type:'\2714\00A0\00A0' ;
    list-style-position: inside;
    columns: 2;
}

footer{
    background-color: var(--cor5);
    color: white;
    text-align: center;
    font-size: 0.8em;
    padding: 5px;
}

footer a {
    color: white;
    font-weight: bolder;
    text-decoration: none;
}
footer a:hover{
    text-decoration: underline;
    color: var(--cor1);
}

